--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <i class="fab fa-whatsapp"></i>
                     <span>Primary WhatsApp(1)</span>
                 </a>
-                <a href="https://wa.me/919038020017?text=" class="contact-item whatsapp">
+                <a href="https://wa.me/#?text=" class="contact-item whatsapp">
                     <i class="fab fa-whatsapp"></i>
                     <span>Secondary WhatsApp(2)</span>
                 </a>
