--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
             height: 100%;
             object-fit: cover;
         }
+        .th{
+            font-weight: bold;
+            font-size: 18px;
+        }
 
         @media (max-width: 480px) {
             .logo {
@@ -183,30 +187,38 @@
             <div class="contact-items">
                 <a href="https://wa.me/917980263195?text=" class="contact-item whatsapp">
                     <i class="fab fa-whatsapp"></i>
-                    <span>Primary WhatsApp(1)</span>
+                    <span><div class='th'>Primary WhatsApp(1)</div>7980263195</span>
                 </a>
                 <a href="https://wa.me/#?text=" class="contact-item whatsapp">
                     <i class="fab fa-whatsapp"></i>
-                    <span>Secondary WhatsApp(2)</span>
+                    <span><div class='th'>Secondary WhatsApp(2)</div></span>
                 </a>
                 <a href="mailto:sahajtmks@gmail.com?subject=Print&body= -> " class="contact-item email">
                     <i class="fas fa-envelope"></i>
-                    <span>Send us an Email</span>
+                    <span><div class='th'>Send us an Email</div>sahajtmks@gmail.com</span>
                 </a>
                 <a href="sms:+917980263195?body=" class="contact-item message">
                     <i class="fas fa-comment-alt"></i>
-                    <span>Text Message</span>
+                    <span><div class='th'>Text Message </div>7980263195</span>
+                </a>
+                <a href="https://sahajtmks.github.io/sahajtmks/" class="contact-item whatsapp">
+                    <i class="fa-solid fa-globe"></i>
+                    <span><div class='th'>WEBSITE</div>Sahaj Tathya Mitra Kendra</span>
                 </a>
                 <a href="upi://pay?pa=9051634959@ybl&pn=Susil%20Mondal&mc=0000&mode=02&purpose=00" class="contact-item whatsapp">
                     <i class="fa-solid fa-money-bill-trend-up"></i>
-                    <span>UPI Pay</span>
+                    <span><div class='th'>UPI Pay</div>UPI ID- 9051634959@upi</span>
                 </a>
-                <div class="contact-item location">
+                <a href="https://maps.app.goo.gl/YRRDGmyLpcn4WB1e7" style="text-decoration: none; color: #333;" class="contact-item whatsapp">
                     <i class="fas fa-map-marker-alt"></i>
-                    <a href="https://maps.app.goo.gl/YRRDGmyLpcn4WB1e7" style="text-decoration: none; color: #333;">
-                    <span>More, Ghasiara, Rajpur Sonarpur, West Bengal 700150</span>
+                    <span><div class='th'>Sahaj Tathya Mitra Kendra</div> More, Ghasiara, Rajpur Sonarpur, West Bengal 700150</span>
                 </a>
-                </div>
+                <!-- <div class="contact-item location"> -->
+                    <!-- <i class="fas fa-map-marker-alt"></i>
+                    <a href="https://maps.app.goo.gl/YRRDGmyLpcn4WB1e7" style="text-decoration: none; color: #333;">
+                    <span><div class='th'>Sahaj Tathya Mitra Kendra</div> More, Ghasiara, Rajpur Sonarpur, West Bengal 700150</span>
+                </a> -->
+                <!-- </div> -->
             </div>
             <div class="map-container">
                 <img src="https://i.pinimg.com/736x/b6/ac/10/b6ac106ab272acd488373688d197d22c.jpg">
@@ -215,4 +227,3 @@
     </div>
 </body>
 </html>
-
