--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         <div class="contact-content">
             <h2 class="contact-title">Sahaj Tathya Mitra Kendra</h2>
             <div class="contact-items">
+                <a href="tel:+917980263195" class="contact-item whatsapp">
+                    <i class="fa-regular fa-phone"></i>
+                    <span><div class='th'>Call On</div>7980263195</span>
+                </a>
                 <a href="https://wa.me/917980263195?text=" class="contact-item whatsapp">
                     <i class="fab fa-whatsapp"></i>
                     <span><div class='th'>Primary WhatsApp(1)</div>7980263195</span>
