--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="contact-content">
             <h2 class="contact-title">Sahaj Tathya Mitra Kendra</h2>
             <div class="contact-items">
-                <a href="tel:+917980263195" class="contact-item whatsapp">
+                <a href="tel:7980263195" class="contact-item whatsapp">
                     <i class="fa-solid fa-phone"></i>
                     <span><div class='th'>Call On</div>7980263195</span>
                 </a>
