--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             color: #333;
             font-size: 24px;
             font-weight: 600;
+            font-weight: bold;
         }
 
         .contact-items {
